Fixed Sidebar Overflow Scroll
Made the sidebar overflow:scroll when there are too many menu items.

--- a/style.less
+++ b/style.less
@@ -214,28 +214,26 @@ body {
 
 .header-logo {
 	width: 15rem;
-	padding: 1.5rem;
+	padding: 3rem 1.5rem 1.5rem 1.5rem;
 }
-
-/*.site {
-	margin-top: 3rem;
-}*/
 
 .main-navigation {
 	width: 18rem;
 	background-color:@lightgray;
 	border-right: 1px solid #D1D1D1;
-	top: 0;
 	bottom: 0;
+	top: 0;
 	float: left;
 	position: fixed;
 	overflow: auto;
 }
 
 .main-menu-nav-container {
-	margin-top: 3rem!important;	
-	position: relative;
+	margin-top: 3rem!important;
+	 position: relative;
 }
+
+
 
 .nav-menu {
 	z-index: -1;
@@ -248,13 +246,8 @@ body {
 
 .site-header {
 	min-height: 3rem;
-	top: 0;
 	width: 100%;
-	position: fixed;
-}
-
-.admin-bar .site-header {
-	top: 28px;
+	top: 0;
 }
 
 .site-search {
@@ -298,12 +291,6 @@ width: 30rem;
 height: 30rem;
 }
 
-.homepage-logo {
-	margin-left: -7rem;
-}
-
-
-
 code	{
 	overflow: auto;
 	width: 100%;
@@ -315,6 +302,7 @@ code	{
 .site-header {
 	background-color: #39465A;
 	z-index: 1;
+	top: 0;
 }
 
 
@@ -453,8 +441,4 @@ padding: 0 0 1rem 0;
 
 .inblue {
 	background-color: @inblue;
-}
-
-#wpadminbar .header-logo {
-	margin-top: 2rem;
 }
